--- a/.github/workflows/publish-docker.yml
+++ b/.github/workflows/publish-docker.yml
@@ -53,6 +53,7 @@ jobs:
             linux/arm/v7
             linux/arm64
             linux/ppc64le
+            linux/riscv64
             linux/s390x
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
